[Lutron] Updates to keypad enhancements
Signed-off-by: Bob Adair <bob.github@att.net> (github: bobadair)